# MEAL

./: .gitignore  README.md  demo_complementary_restrictions.py  practical_reward_baseline.yaml  pyproject.toml  requirements.txt  run_teammate_generation.sh  setup.py  test_complementary_restrictions.py  test_ippo_cl_restrictions.py
architectures/: Q_MLP.py  cnn.py  decoupled_mlp.py  mlp.py  q_network.py
baselines/: IPPO_CBP.py  IPPO_CL.py  IPPO_CNN.py  IPPO_EVAL.py  IPPO_FAST.py  IPPO_MLP.py  IPPO_MLP_CBP.py  IPPO_Packnet.py  IPPO_decoupled_MLP.py  IPPO_decoupled_MLP_Packnet.py  IPPO_shared_MLP.py  IPPO_shared_MLP_AGEM.py  IPPO_shared_MLP_EWC.py  IPPO_shared_MLP_L2.py  IPPO_shared_MLP_MAS.py  MAPPO_CL.py  PPO_CL.py  PPO_MULTI.py  VDN_CL.py  utils.py  vdn_cnn.py
bash/: run_cluster_job.sh
cl_methods/: AGEM.py  CBP.py  EWC.py  FT.py  L2.py  MAS.py  Packnet.py  Packnet_CL.py
eval_agents/: agent_interface.py  mlp_actor_critic.py
eval_agents_generation/: BRDiv.py  run.py  run_br.py  run_episodes.py  train_br.py  train_ego.py  utils.py
examples/: README.md  basic_usage.py  cl_sequence.py  continual_learning_sequence.py  environment_types.py  four_agents.py
experiments/: IPPO_CL.py  MAPPO_CL.py  PPO_CL.py  README.MD  evaluation.py  evaluation_jaxnav.py  evaluation_mpe.py  evaluation_smax.py  happo.py  ippo.py  ippo_jaxnav.py  ippo_mpe.py  ippo_orig.py  ippo_po.py  ippo_smax.py  mappo.py  ppo.py  qmix.py  utils.py  vdn.py
jax_marl/: registration.py
meal/: README.MD  __init__.py  registration.py
partner_adaptation/: run_br.py  train_br.py  train_ego.py
(+363 files in other folders)
