[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "MEAL-Bench"
version = "0.1.0"
description = "MEAL: A Benchmark for Continual Multi-Agent Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tristan Tomilin", email = "tristan.tomilin@hotmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "chex",
    "distrax",
    "flashbax",
    "flax",
    "gymnax",
    "jax",
    "pyyaml",
    "tensorboard",
    "tensorboardX",
    "tyro",
    "wandb",
]

[project.optional-dependencies]
viz = [
    "imageio",
    "imageio[ffmpeg]",
    "ipython",
    "ipywidgets",
    "jinja2",
    "matplotlib",
    "pillow",
    "pygame",
    "scipy",
    "seaborn",
]
utils = [
    "numpy",
    "optax",
    "orbax-checkpoint",
    "pandas",
    "pytest",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/TTomilin/MEAL"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[tool.setuptools]
include-package-data = true
